# eye

./: .gitignore  Cargo.toml  FUTURE.md  LSP.md  M5.md  README.md  VISION.md  design.eye  main  main.c  main.eye  profile_batch.sh
.github/workflows/: ci.yml  release.yml
benches/: compile.rs
crates/ast/: Cargo.toml  eye.ungram
crates/ast/src/: generated.rs  lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: core.rs  lib.rs
crates/codegen/src/core/: arrays.rs  expr.rs  items.rs  matches.rs  mir_emit.rs  print.rs  stmt.rs  tests.rs  types.rs
crates/codegen/src/core/mir_emit/: expr.rs  mod.rs  strings.rs  switch.rs
crates/codegen/src/core/snapshots/: codegen__core__tests__main_eye_c_output_snapshot.snap  codegen__core__tests__main_eye_c_output_snapshot.snap.new
crates/codegen/src/snapshots/: codegen__core__tests__main_eye_c_output_snapshot.snap
crates/database/: Cargo.toml
crates/database/src/: lib.rs  tests.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/effect/: Cargo.toml
crates/effect/src/: judge.rs  lattice.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: core.rs
crates/hir/src/core/: body.rs  errors.rs  ids.rs  items.rs  lower.rs  tests.rs  typed_arena.rs  typegraph.rs  types.rs
crates/hir/src/core/lower/: coerce.rs  collect.rs  const_eval.rs  ctx.rs  expr.rs  fn_body.rs  mod.rs  pat.rs  recursion.rs  scopes.rs  stmt.rs  types.rs
crates/hir/src/core/tests/: arrays.rs  consts.rs  format.rs  functions.rs  matches.rs  mod.rs  naming.rs  pointers.rs  structs.rs
crates/lexer/: Cargo.toml
crates/lexer/crates/lexer/src/snapshots/: lexer__tests__token_stream_snapshot.snap.new
crates/lexer/src/: interner.rs  lib.rs  source.rs
crates/lexer/src/snapshots/: lexer__tests__token_stream_snapshot.snap
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostics.rs  documents.rs  legend.rs  lib.rs  main.rs  semantic.rs  server.rs
crates/lsp/src/highlight/: cst.rs  mod.rs  token_kind.rs
crates/lsp/src/server/: mod.rs  notifications.rs  requests.rs
crates/mir/: Cargo.toml
crates/mir/src/: core.rs  lib.rs  lower.rs  tests.rs
crates/mir/src/lower/: expr.rs  mod.rs  place.rs  stmt.rs
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  event.rs  grammar.rs  lib.rs
crates/parser/src/grammar/: expr.rs  items.rs  mod.rs  pat.rs  stmt.rs  types.rs
crates/parser/src/snapshots/: parser__tests__cst_snapshot.snap
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/typeck/: Cargo.toml
crates/typeck/src/: infer.rs  lib.rs
crates/typeck/src/infer/: coerce.rs  judgments.rs  mod.rs  ty.rs
crates/typeck/tests/: judgments.rs
crates/typeck/tests/judgments/: branches.rs  calls.rs  casts.rs  let_init.rs  main.rs  matches.rs  range_arith.rs  returns.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ARRAY.md  AUDIT.md  DEFER.md  DESIGN.md  DIAGNOSTICS.md  FUTURE.md  ISSUE.md  M5.md  MAINTENANCE.md  MATCH.md  MIR.md  NOTES.md  PRINT.md  REDESIGN.md  STYLE.md  TYPECK.md  VISION.md  adding-features.md  editor-setup.md  grammar.md  performance.md  todo.md
docs/design/: AUDIT.md  CLEAK.md  DESIGN.md  HORIZON0.md  KERNEL.md  LIMITS.md  MEM.md  MODBLOCK.md  PARALLEL.md  PHILOSOPHY.md  QUERY.md  REDESIGN.md  SALSA.md  VISION.md
docs/dev/: CAPABILITIES.md  README.md  adding-features.md  editor-setup.md  review-notes.md
docs/features/: ARRAY.md  BUILD.md  CAST.md  CONST.md  DIAGNOSTICS.md  EFFECT.md  ERRORS.md  FFI.md  FNPTR.md  LSP.md  MAIN.md  MATCH.md  MIR-OPT.md  MIR.md  MUT.md  PRIME.md  PRINT.md  SIZEOF.md  STRING.md  TOPOLOGY.md  TYPECK.md  VFS.md
docs/planning/: DEFER.md  DESIGN-INDEX.md  FARFUTURE.md  FUTURE.md  LSP-ROADMAP.md  M5.md  MASTERPLAN.md  NOTES.md  OVERHEAD.md  ledger.md
eyesrc/: arr_test.eye  arrays.eye  bubblesort.eye  check_all.sh  clean.sh  design.eye  example.eye  ffi  ffi.eye  file.eye  floodfill.eye  main.eye  mandlebrot.eye  match.eye  montecarlopi.eye  particle.eye  physics  physics.eye  print.eye  raytracer.eye  statistics.eye  test.eye  test2.eye  update_snapshots.sh  v03  v03.eye  v04.eye  v06.eye  wierd.eye
eyesrc/ffi/: caesar.eye  ffi.eye
eyesrc/lang/: array_fill.eye  arrays.eye  const.eye  control_flow.eye  destructure.eye  enums.eye  floats.eye  fnptr.eye  functions.eye  global.eye  guard_example.eye  integers.eye  literals.eye  match.eye  match_prim.eye  mutability.eye  operators.eye  pointers.eye  print.eye  println_example.eye  sizeof.eye  string.eye  structs.eye  unions.eye
eyesrc/programs/: bubblesort.eye  calculator.eye  design.eye  example.eye  file.eye  floodfill.eye  histogram.eye  lang.eye  linkedlist.eye  main.eye  mandlebrot.eye  montecarlopi.eye  physics.eye  raytracer.eye  rc.eye  sieve.eye  statistics.eye  wierd.eye
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_full.rs  fuzz_lexer.rs  fuzz_parser.rs
scripts/: check-c-strict.sh  check-grammars.sh  eye-lsp-dev  install.sh
src/: ast.rs  backend.rs  cli.rs  diagnostics.rs  grammar.rs  lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs  token.rs
src/dump/: ast.rs  hir.rs  mir.rs  mod.rs  symbols.rs
src/snapshots/: eye__lexer__tests__token_stream_snapshot.snap  eye__parser__tests__cst_snapshot.snap
tests/: e2e.rs  proptest.proptest-regressions  proptest.rs  snapshots.rs
tests/common/: mod.rs
tests/snapshots/: snapshots__c_codegen.snap  snapshots__hir_dump.snap  snapshots__hir_raw_dump.snap  snapshots__mir_dump.snap
