[workspace]
resolver = "3"
members = [
    "crates/token",
    "crates/diagnostics",
    "crates/lexer",
    "crates/syntax",
    "crates/parser",
    "crates/ast",
    "crates/hir",
    "crates/mir",
    "crates/xtask",
    "crates/codegen",
    "crates/lsp",
    "crates/typeck",
    "crates/effect",
    "crates/database",
]

[profile.dev]
debug = 1
codegen-units = 256
# macOS: emit debuginfo beside the objects instead of running the slow
# `dsymutil` pack step - a large debug-build win, and stable-toolchain safe
# (no codegen-backend swap, so nothing for salsa's macros to trip over).
split-debuginfo = "unpacked"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# external
anyhow = "1.0.102"
criterion = { version = "0.5", features = ["cargo_bench_support"] }
drop_bomb = "0.1.5"
logos = "0.16"
memchr = "2.8.0"
memmap2 = "0.9.10"
proc-macro2 = "1"
quote = "1"
rowan = "0.16.1"
rustc-hash = "2.1.2"
ryu = "1.0"
itoa = "1.0"
smol_str = "0.3"
text-size = "1.1"
ungrammar = "1.16"
insta = "1"
thin-vec = "0.2.18"
smallvec = "1.15.1"
la-arena = "0.3"
salsa = "0.27"
rayon = "1"
mimalloc = "0.1"
thiserror = "2"
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
# internal - keyed by short lib name, backed by `eye-*` packages
token = { path = "crates/token", package = "eye-token" }
diagnostics = { path = "crates/diagnostics", package = "eye-diagnostics" }
lexer = { path = "crates/lexer", package = "eye-lexer" }
syntax = { path = "crates/syntax", package = "eye-syntax" }
parser = { path = "crates/parser", package = "eye-parser" }
ast = { path = "crates/ast", package = "eye-ast" }
hir = { path = "crates/hir", package = "eye-hir" }
mir = { path = "crates/mir", package = "eye-mir" }
codegen = {path = "crates/codegen", package = "eye-codegen"}
lsp = { path = "crates/lsp", package = "eye-lsp" }
typeck = { path = "crates/typeck", package = "eye-typeck" }
effect = { path = "crates/effect", package = "eye-effect" }
database = { path = "crates/database", package = "eye-database" }

# ---- the `eye` binary: thin driver over the compiler crates ----
[package]
name = "eye"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eye"
path = "src/main.rs"

[[bin]]
name = "flamebench"
path = "src/bin/flamebench.rs"

[lib]
name = "eye"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
memmap2.workspace = true
mimalloc.workspace = true
ast.workspace = true
lexer.workspace = true
parser.workspace = true
syntax.workspace = true
smallvec.workspace = true
hir.workspace = true
typeck.workspace = true
mir.workspace = true
codegen.workspace = true
diagnostics.workspace = true
effect.workspace = true
ariadne.workspace = true
clap.workspace = true
rustc-hash.workspace = true
database.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest = "1"
token.workspace = true
text-size.workspace = true

[[bench]]
name = "compile"
harness = false
