[package]
name = "eye-database"
version.workspace = true
edition.workspace = true

[lib]
name = "database"

[dependencies]
salsa.workspace = true
la-arena.workspace = true
diagnostics.workspace = true
syntax.workspace = true
lexer.workspace = true
parser.workspace = true
ast.workspace = true
hir.workspace = true
typeck.workspace = true
effect.workspace = true
mir.workspace = true
codegen.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
smol_str.workspace = true
text-size.workspace = true
rowan.workspace = true
