[package]
name = "eye-hir"
version.workspace = true
edition.workspace = true

[lib]
name = "hir"

[dependencies]
la-arena.workspace = true
syntax.workspace = true
ast.workspace = true
smol_str.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thin-vec.workspace = true

[dev-dependencies]
lexer.workspace = true
parser.workspace = true
