[package]
name = "eye-hir"
version.workspace = true
edition.workspace = true

[lib]
name = "hir"

[dependencies]
la-arena.workspace = true
diagnostics.workspace = true
syntax.workspace = true
ast.workspace = true
smol_str.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thin-vec.workspace = true
boxcar = "0.2.14"
papaya = "0.2.4"

[dev-dependencies]
lexer.workspace = true
parser.workspace = true
