[package]
name = "eye-lsp"
version.workspace = true
edition.workspace = true

# entry point for the LSP server
[[bin]]
name = "eye-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"

# internal
lexer.workspace = true
parser.workspace = true
ast.workspace = true
hir.workspace = true
syntax.workspace = true
anyhow.workspace = true
